--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Anndersonnluiz/api-bairro#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "lower-case": "^2.0.1"
   }
 }
